compilers/nim-2.2.4/tests/errmsgs/trecursiveproctype4.nim
discard """
  errormsg: "illegal recursion in type 'EventHandler'"
  line: 9
"""

# issue #23885

type
  EventHandler = proc(target: BB)
  BB = (EventHandler,)
